[tool.poetry]
name = "sblock"
version = "0.1.0"
description = "Project to fast EVM (or EVM-compatible chains) block data processing"
authors = ["fbrcode <fabio.bressler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
start = "sblock.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
